<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ReminderCreateDialogFragment"
    android:padding="@dimen/text_padding_medium"
    android:background="@color/pastel_background_light">

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        android:text="@string/name_txt"
        android:background="@drawable/border_rounded"
        android:padding="@dimen/text_padding_small"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintRight_toLeftOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_name"
        android:inputType="text"
        android:background="@drawable/border_rounded"
        android:padding="@dimen/text_padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name_txt"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <TextView
        android:id="@+id/date_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        android:text="@string/date_txt"
        android:background="@drawable/border_rounded"
        android:padding="@dimen/text_padding_small"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintRight_toLeftOf="@id/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_txt" >
    </TextView>
    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_date"
        android:inputType="date"
        android:background="@drawable/border_rounded"
        android:padding="@dimen/text_padding_small"
        app:layout_constraintStart_toEndOf="@id/date_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">
    </EditText>

    <Button
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_light"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancelButton"
        android:text="@string/create_button" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:backgroundTint="@color/grey_light"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/createButton"
        android:text="@string/cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>